[project]
name = "wavespeed"
description = ""
version = "1.0.5"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/chengzeyi/Comfy-WaveSpeed"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "chengzeyi"
DisplayName = "Comfy-WaveSpeed"
Icon = ""
